# zkllvm-doomreplay

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doom1_wad_hardcopy.h  hardcode_wad  hardcode_wad.c  run-all.sh  tempnotes.md
cmake/: CircuitCompile.cmake
doomgeneric/: d_loop.c  d_main.c  d_net.c  doomgeneric_dr.c  g_game.c  hardcode_wad_sharded.c  hu_stuff.c  i_input.c  i_main.c  i_video.c  m_controls.c  p_mobj.c  p_setup.c  s_sound.c  v_video.c  w_file.c  w_file.h  w_wad.c  z_main.c
input/: test1.txt
zkldoom/: CMakeLists.txt  CTestTestfile.cmake  Makefile.zkld  am_map.c  cmake_install.cmake  d_event.c  d_event.h  d_items.h  d_iwad.c  d_iwad.h  d_loop.c  d_loop.h  d_main.c  d_net.c  d_player.h  d_textur.h  d_think.c  d_think.h  d_ticcmd.h  doom.h  doomdata.h  doomdef.h  doomgeneric.c  doomgeneric.h  doomgeneric_dr.c  doomreplay.h  doomstat.h  doomtype.h  f_finale.c  g_game.c  g_game.h  gusconf.c  hu_lib.c  hu_lib.h  hu_stuff.c  i_cdmus.c  i_endoom.c  i_input.c  i_joystick.c  i_scale.c  (+84 more)
